--- a/JAVA- Patterns/JAVA- Pattern_01/Readme
+++ b/JAVA- Patterns/JAVA- Pattern_01/Readme
@@ -13,4 +13,4 @@ Your structure formed of 5 size is:
     E   7
 H G F   8
 
-This pattern will form of size: 3, 5, 7, 9, 11.
+NOTE: This pattern will form of size: 3, 5, 7, 9, 11.
